--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,10 @@
     <string name="flight_number">Flight Number</string>
     <string name="new_trip_enter_flight_number">Enter flight number</string>
     <string name="new_trip_departure_date">Departure date</string>
-    <string name="new_trip_scan_boarding_pass">Or scan your boarding pass</string>
+    <string name="new_trip_scan_boarding_pass">Or enter your flight information</string>
     <string name="new_trip_scan">Scan Boarding Pass</string>
     <string name="airline_pick_search_by_name">Search by name...</string>
     <string name="pick_airline">Pick airline</string>
+    <string name="new_trip_select_flight">Select flight</string>
+    <string name="new_trip">New trip</string>
 </resources>
