styles and flow improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="new_trip_select_flight">Select flight</string>
     <string name="new_trip">New trip</string>
     <string name="select_flight">Select flight</string>
+    <string name="trips_activity">Trips</string>
 </resources>
