--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,8 @@
     <string name="security_video">Security Checking Procedure</string>
     <string name="launchSecurityCheck">Security Checkin</string>
     <string name="scan_parsing_error">Error scanning boarding ticket</string>
+    <string name="call_action">Call</string>
+    <string name="translate_action">Translator</string>
+    <string name="map_action">Map</string>
 </resources>
 
