added more help pages for travel prep

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,5 +61,6 @@
     <string name="yes_delete">Yes, Delete</string>
     <string name="sec_check_in_hint_description">Checkin List</string>
     <string name="sec_check_in_hint_help">Help</string>
-   </resources>
+    <string name="liquidRules">Liquids Rule</string>
+</resources>
 
