use datedialogpicker instead of datepicker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,5 +139,6 @@
     <string name="card_title_checkin">Check-in</string>
     <string name="card_title_preparation">Travel Preparation</string>
     <string name="card_title_plane">In Plane</string>
+    <string name="select_date">Select departing date ...</string>
 </resources>
 
